// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link should render disabled link 1`] = `
<div>
  <span
    class="link disabled blue"
  >
    text
  </span>
</div>
`;

exports[`Link should render link with href attribute 1`] = `
<div>
  <a
    class="link blue"
    href="https://yandex.ru"
    role="link"
    tabindex="0"
  >
    text
  </a>
</div>
`;

exports[`Link should render link without href attribute 1`] = `
<div>
  <span
    class="link blue"
    role="link"
    tabindex="0"
  >
    text
  </span>
</div>
`;
